src/test/ui/consts/dangling-alloc-id-ice-2.nll.stderr
warning[E0716]: temporary value dropped while borrowed
  --> $DIR/dangling-alloc-id-ice-2.rs:5:28
   |
LL |    static MAP: Slice = Slice(&[
   |   ___________________________-^
   |  |___________________________|
   | ||
LL | ||     b"CloseEvent" as &'static [u8],
LL | || ]);
   | || -- temporary value is freed at the end of this statement
   | ||_|
   | |__creates a temporary which is freed while still in use
   |    cast requires that borrow lasts for `'static`
   |
   = warning: This error has been downgraded to a warning for backwards compatibility with previous releases.
           It represents potential unsoundness in your code.
           This warning will become a hard error in the future.

error[E0080]: could not evaluate static initializer
  --> $DIR/dangling-alloc-id-ice-2.rs:5:1
   |
LL | / static MAP: Slice = Slice(&[
LL | |     b"CloseEvent" as &'static [u8],
LL | | ]);
   | |___^ type validation failed: encountered dangling pointer in final constant

error: aborting due to previous error

Some errors occurred: E0080, E0716.
For more information about an error, try `rustc --explain E0080`.
